add UI for workspace description
